<resources>
    <string name="app_name">Tato Platform</string>
    <string name="title_active_login">Bienvenido a Tato</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre</string>
    <string name="number">Número de teléfono</string>
    <string name="usertype">¿Eres Cliente o Técnico Profesional?</string>
    <string name="email">Correo Electronico</string>
    <string name="login">Iniciar Sesion</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrate</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Registrate</string>
    <string name="all">TODO</string>
    <string name="user_email">usuario@gmail.com</string>
    <string name="user_name">Usuario predeterminado</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿Olvidaste tu Contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar tu registro, por favor verifica tu correo y después haz clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la Cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="client_type">Cliente</string>
    <string name="reviewBtn">Ver evaluacion</string>
    <string name="tech_type">Tecnico / Profesional</string>
    <string name="radio_callopt">Llamada</string>
    <string name="radio_whatsappopt">Whatsapp</string>
    <string name="call_pref">¿Cómo prefieres que te contacten?</string>
    <string name="contact_like">Contactar por</string>
    <string name="user_type">¿Que tipo de usuario eres?</string>
    <string name="user_dep">¿De qué departamento eres?</string>
    <string name="dep_name">Departamento </string>
    <string name="tech_profession">Profesion </string>
    <string name="tech_professionSelect">¿Cuál es tu área de profesión u oficio? </string>
    <string name="view_profile">Ver perfil </string>
    <string name="view_techs">Mostrar listado de tecnicos </string>


    <string-array name="Departamentos">
        <item>Atlántida</item>
        <item>Choluteca</item>
        <item>Colón</item>
        <item>Comayagua</item>
        <item>Copán</item>
        <item>Cortés</item>
        <item>El Paraíso</item>
        <item>Francisco Morazán</item>
        <item>Gracias a Dios</item>
        <item>Intibucá</item>
        <item>Islas de la Bahía</item>
        <item>La Paz</item>
        <item>Lempira</item>
        <item>Ocotepeque</item>
        <item>Olancho</item>
        <item>Santa Bárbara</item>
        <item>Valle</item>
        <item>Yoro</item>

    </string-array>

</resources>