<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_backblue"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/all"
            android:layout_marginStart="16dp" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/all"
                app:srcCompat="@drawable/img_capturaremoveb"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <EditText
                android:id="@+id/uNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/name"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/img_usuario1"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="16dp" />

            <EditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/number"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/img_telefonointeli"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/number"
                android:inputType="number"
                android:padding="16dp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/black_500"
                android:text="@string/user_type" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="24dp"
                android:checkedButton="@+id/radio_client"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_client"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_type"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#322E89"
                    android:buttonTint="#322e89"/>

                <RadioButton
                    android:id="@+id/radio_tech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tech_type"
                    android:buttonTint="#322e89"/>


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:textColor="@color/black_500"
                android:text="@string/call_pref" />
            <RadioGroup
                android:id="@+id/contactRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="24dp"
                android:checkedButton="@+id/radio_call"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_callopt"
                    android:buttonTint="#322e89"/>

                <RadioButton
                    android:id="@+id/radio_whatsapp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_whatsappopt"
                    android:buttonTint="#322e89"/>


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black_500"
                android:layout_marginRight="24dp"
                android:text="@string/tech_professionSelect" />
            <Spinner
                android:id="@+id/profSpinner"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black_500"
                android:layout_marginRight="24dp"
                android:text="@string/user_dep" />
            <Spinner
                android:id="@+id/depSpinner"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                />



            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/email"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/password"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/img_contrasenas1"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="16dp" />

            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/repeat_password"
                android:background="@drawable/ic_field"
                android:drawableStart="@drawable/img_contrasenas1"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:padding="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/ic_buttom"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

